--- a/spritekit-plataform/views/scenes/FighterArena.plist
+++ b/spritekit-plataform/views/scenes/FighterArena.plist
@@ -2,6 +2,27 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>environment</key>
+	<dict>
+		<key>prop</key>
+		<dict>
+			<key>scale</key>
+			<real>1.2</real>
+			<key>positionY</key>
+			<real>50</real>
+			<key>positionX</key>
+			<integer>100</integer>
+			<key>atlas</key>
+			<string>rocks</string>
+		</dict>
+		<key>floor</key>
+		<string>ground</string>
+		<key>background</key>
+		<array>
+			<string>sky</string>
+			<string>sea</string>
+		</array>
+	</dict>
 	<key>playerSlots</key>
 	<array>
 		<dict>
