--- a/spritekit-plataform/views/scenes/FighterArena.plist
+++ b/spritekit-plataform/views/scenes/FighterArena.plist
@@ -36,7 +36,7 @@
 	<array>
 		<dict>
 			<key>atlas</key>
-			<string>Platform1</string>
+			<string>platform-final</string>
 			<key>positionX</key>
 			<integer>300</integer>
 			<key>positionY</key>
@@ -44,7 +44,7 @@
 		</dict>
 		<dict>
 			<key>atlas</key>
-			<string>Platform1</string>
+			<string>platform-final</string>
 			<key>positionX</key>
 			<integer>200</integer>
 			<key>positionY</key>
